# rn_native_c

./: App.tsx  OnLoadCOP.cpp  app.json  package-lock.json  package.json  pnpm-lock.yaml
android/: gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/java/com/rostek/: MainActivity.kt  MainApplication.kt
android/app/src/main/jni/: CMakeLists.txt  OnLoad.cpp
android/app/src/main/res/values/: strings.xml
ios/: Podfile
ios/Rostek/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
ios/Rostek.xcodeproj/: project.pbxproj
ios/Rostek.xcodeproj/xcshareddata/xcschemes/: Rostek.xcscheme
ios/RostekTests/: RostekTests.m
shared/: NativeDnd.cpp  NativeDnd.h
specs/: NativeDnd.ts
